# backend

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  .test-main.txt  ARCHITECTURE.md  CERTIFICATE_SYSTEM_IMPLEMENTATION.md  CHANGELOG.md  CI_SETUP_COMPLETE.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_QUICK.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_WORKFLOW.md  DEVELOPMENT.md  DOCKER.md  DOCKER_HUB_SETUP.md  Dockerfile  GITHUB_SETUP.md  GIT_FLOW_TEST_RESULTS.md  GIT_WORKFLOW.md  INSTALL_GUIDE.md  K8S_DEPLOY_GUIDE.md  LICENSE  PORT_80_SUCCESS.md  PORT_ACCESS_GUIDE.md  PRE_K8S_CHECKLIST.md  PRODUCTION_READINESS.md  PRODUCTION_READY.md  PRODUCTION_WORKFLOW.md  PROD_APPROVAL_SOLUTION.md  QUICKSTART_DOCKER.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  (+24 more)
.github/: BRANCH_PROTECTION_SETUP.md  CI_README.md  CODEOWNERS  TEST_PLAN.md  copilot-instructions.md  markdown-link-check-config.json
.github/workflows/: branch-protection.yml  ci.yml  dependency-updates.yml  docker-publish.yml  docs.yml  pr-checks.yml
docs/: CHANGELOG.md  EMAIL_CERTIFICATE_SETUP.md  MULTILINGUAL_CERTIFICATES.md  NOTIFICATIONS_PURPOSE.md  README.md  STRUCTURE.md  SUBSCRIPTION_MANAGEMENT.md
docs/authentication/: OAUTH_SETUP.md
docs/courses/: docker_practical_course.json  git_github_course_practical.json
docs/deployment/: DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_CHECKLIST.md  EMAIL_SMTP_SETUP.md  K8S_DEPLOY_GUIDE.md  PRODUCTION_READY.md  START_HERE.md  TROUBLESHOOTING.md
docs/development/: ARCHITECTURE.md  CONTRIBUTING.md
docs/examples/: course_example.json  git_github_course_practical.json  git_github_course_practical_backup.json
docs/features/: MULTILINGUAL_CERTIFICATES.md
docs/getting-started/: QUICK_START.md
docs/localization/: COURSE_LOCALIZATION_GUIDE.md  LOCALIZATION_GUIDE.md  LOCALIZATION_QUICKSTART.md
docs/payments/: CURRENCY_IMPLEMENTATION.md  CURRENCY_SETUP.md  PADDLE_CHECKOUT_FLOW.md  PADDLE_INTEGRATION.md  PADDLE_TESTING.md  QUICK_START_AUTOMATION.md  README.md  TBC_BANK_APPLICATION_FORM.md
docs/security/: SECURITY_AUDIT_2026-02-26.md
docs/troubleshooting/: BROWSER_CACHE_FIX.md  IPHONE_FIX.md  QUICK_FIX_GUIDE.md  STATIC_FIX.md
k8s/: README.md  ingress.yaml  job-import-courses.yaml  letsencrypt-issuer.yaml  timeweb-deploy.yaml
k8s/base/: configmap.yaml  deployment-celery-beat.yaml  deployment-celery-worker.yaml  deployment-web.yaml  job-migrations.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service-postgres.yaml  service-redis.yaml  service-web.yaml  statefulset-postgres.yaml  statefulset-redis.yaml
k8s/scripts/: README.md  generate-k8s-secrets.sh  setup-ingress.sh
nginx/: CHECKLIST.md  DNS_SETUP.md  QUICKSTART.md  README.md  gunicorn_config.py  pyland.conf
nginx/scripts/: backup.sh  deploy.sh  install.sh  manage_services.sh  pre_deploy_check.sh  prepare_deploy.sh
nginx/systemd/: pyland-celery-beat.service  pyland-celery-worker.service  pyland-gunicorn.service
src/: conftest.py  manage.py  tests.sh
src/authentication/: DASHBOARD_ROUTER.md  QUICK_REFERENCE.md  README.md  __init__.py  admin.py  api.py  apps.py  decorators.py  forms.py  models.py  schemas.py  signals.py  tasks.py  urls.py  views.py
src/blog/: README.md  __init__.py  admin.py  api.py  apps.py  cache_utils.py  forms.py  middleware.py  models.py  schemas.py  tasks.py  urls.py  views.py
src/certificates/: README.md  __init__.py  admin.py  api.py  apps.py  models.py  qr_utils.py  signals.py  tasks.py  urls.py  utils.py  views.py
src/core/: README.md  __init__.py  api.py  apps.py  cache_utils.py  context_processors.py  forms.py  health.py  middleware.py  schemas.py  urls.py  views.py
src/courses/: README.md  __init__.py  admin.py  (+7 more)
(+558 files in other folders)
